# DRL_Path_Planning

./: .gitattributes  README.md
src/multi_jackal/: README.md
src/multi_jackal.bak/multi_jackal_base/: CMakeLists.txt  package.xml
src/multi_jackal.bak/multi_jackal_control/: CMakeLists.txt  package.xml
src/multi_jackal.bak/multi_jackal_control/config/: jackal_control_config.yaml
src/multi_jackal.bak/multi_jackal_description/: CMakeLists.txt
src/multi_jackal.bak/multi_jackal_description/launch/: jackal_description.launch  jackal_description1.launch
src/multi_jackal.bak/multi_jackal_description/meshes/: m1013.stl
src/multi_jackal.bak/multi_jackal_description/meshes/alvartags/: alvartags0.dae
src/multi_jackal.bak/multi_jackal_description/meshes/apriltags/: apriltags0.dae  apriltags1.dae  apriltags10.dae  apriltags13.dae  apriltags15.dae  apriltags5.dae  apriltags7.dae  apriltags8.dae  apriltags9.dae
src/multi_jackal.bak/multi_jackal_description/scripts/: env_run
src/multi_jackal.bak/multi_jackal_description/urdf/: custom_accessories.urdf.xacro
src/multi_jackal.bak/multi_jackal_description/urdf/accessories/: apriltag_box.urdf (另一个复件).xacro  apriltag_box.urdf (复件).xacro  apriltag_box.urdf.xacro  apriltag_box_with_pole.urdf.xacro  bridge_plate.urdf.xacro  camera_mount.urdf.xacro  sick_lms1xx_mount.urdf.xacro  standoffs.urdf.xacro
src/multi_jackal.bak/multi_jackal_description/urdf/configs/: alvartags  apriltags  front_laser  laser_add_apriltags  twocams
src/multi_jackal.bak/multi_jackal_nav/: CHANGELOG.rst  package.xml
src/multi_jackal.bak/multi_jackal_nav/params/: move_base_params.yaml
src/multi_jackal.bak/multi_jackal_nav/params/odom_nav_params/: local_costmap_params.yaml
src/multi_jackal.bak/multi_jackal_tutorials/: package.xml
src/multi_jackal.bak/multi_jackal_tutorials/launch/: five_jackal_laser_add_apriltag.launch  jackal_with_gps.launch  one_jackal.launch  one_jackal_image.launch  one_jackal_image_add_sensor.launch  ten_jackal_laser_add_apriltag.launch
src/multi_jackal.bak/multi_jackal_tutorials/rviz/: jackal_with_gps.rviz  one_jackal.rviz  two_jackal.rviz
src/multi_jackal.bak/multi_jackal_tutorials/worlds/: 10obstacle_sensor_30m_5jackal.world  empty_sensor.world  obstacle_image.world  obstacle_sensor.world  obstacle_sensor_true.world  obstacle_sensor_true_2.world  one_jackal_control_empty.world
src/multi_jackal/multi_jackal_base/: CHANGELOG.rst
src/multi_jackal/multi_jackal_base/launch/: jackal_base.launch  jackal_base1.launch
src/multi_jackal/multi_jackal_control/: CHANGELOG.rst
src/multi_jackal/multi_jackal_control/launch/: jackal_control.launch
src/multi_jackal/multi_jackal_description/: CHANGELOG.rst  package.xml
src/multi_jackal/multi_jackal_description/meshes/: jackal-base.stl  jackal-fenders.stl  jackal-wheel.stl
src/multi_jackal/multi_jackal_description/meshes/alvartags/: alvartags1.dae  alvartags2.dae
src/multi_jackal/multi_jackal_description/meshes/apriltags/: apriltags11.dae  apriltags12.dae  apriltags14.dae  apriltags2.dae  apriltags3.dae  apriltags4.dae  apriltags6.dae
src/multi_jackal/multi_jackal_description/urdf/: base_accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
src/multi_jackal/multi_jackal_description/urdf/accessories/: alvartag_box.urdf.xacro  novatel_smart6.urdf.xacro  twocams.urdf.xacro
src/multi_jackal/multi_jackal_description/urdf/configs/: aprilcams  base  bumblebee_add_laser  front_bumblebee2  front_flea3
src/multi_jackal/multi_jackal_nav/: CMakeLists.txt
src/multi_jackal/multi_jackal_nav/launch/: jackal_nav.launch
src/multi_jackal/multi_jackal_nav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_ekf.yaml  local_ekf.yaml
src/multi_jackal/multi_jackal_nav/params/odom_nav_params/: global_costmap_params.yaml
src/multi_jackal/multi_jackal_tutorials/: CHANGELOG.rst  CMakeLists.txt
src/multi_jackal/multi_jackal_tutorials/launch/: one_jackal_control.launch  one_jackal_sensor.launch  three_jackal.launch  two_jackal.launch
src/multi_jackal/multi_jackal_tutorials/rviz/: one_jackal_control.rviz  three_jackal.rviz
src/multi_jackal/multi_jackal_tutorials/worlds/: 5obstacle_sensor_30m_5jackal.world  8obstacle_sensor_30m_5jackal.world  empty_image.world  empty_sensor_30m_5jackal.world  one_jackal_control_one_target.world
src/tf_pkg/: CMakeLists.txt  package.xml
src/tf_pkg/scripts/: 10_D3QN_PER_image_add_sensor_empty_world_30m.py  10_D3QN_PER_image_add_sensor_empty_world_30m_reward.txt  10_D3QN_PER_image_add_sensor_empty_world_30m_test.py  10_D3QN_PER_image_add_sensor_obstacle_world_30m.py  10_D3QN_PER_image_add_sensor_obstacle_world_30m_test.py  12_empty_world_map_d_sp.txt  12_goal_point_x.txt  12_goal_point_y.txt  12_pathplanning.py  12_randangle.txt  12_start_point_x.txt  12_start_point_y.txt  14_static_obstacle_goal_point_x.txt  14_static_obstacle_goal_point_y.txt  14_static_obstacle_obs_pos_x.txt  14_static_obstacle_obs_pos_y.txt  14_static_obstacle_pathplanning.py  14_static_obstacle_randangle.txt  14_static_obstacle_start_point_x.txt  14_static_obstacle_start_point_y.txt  16_plot_10dynamic_obstacle_pathplanning_result.py  D3QN_PER_image_add_sensor_dynamic_10obstacle_world_30m_test.py  Models.py  gazebo_env_D3QN_PER_image_add_sensor_empty_world_30m.py  gazebo_env_D3QN_PER_image_add_sensor_empty_world_30m_test.py  gazebo_env_D3QN_PER_image_add_sensor_obstacle_world_30m.py  gazebo_env_D3QN_PER_image_add_sensor_obstacle_world_30m_test.py  gazebo_env_dynamic_obstacle_10jackal_test.py  pathplaner.py
src/tf_pkg/scripts/saved_networks/10_D3QN_PER_image_add_sensor_empty_world_30m_2019_06_01/: model.ckpt.data-00000-of-00001  model.ckpt.index
src/tf_pkg/scripts/saved_networks/10_D3QN_PER_image_add_sensor_obstacle_world_30m_2019_06_01/: model.ckpt.data-00000-of-00001  model.ckpt.index
src/tf_pkg/scripts/saved_networks/10_D3QN_PER_image_add_sensor_obstacle_world_30m_2_2019_06_02/: model.ckpt.data-00000-of-00001  model.ckpt.index
