<package>
  <name>multi_jackal_tutorials</name>
  <version>0.0.5</version>
  <description>Tutorials for multi-Jackal simulations.</description>
  
  <maintainer email="nick.dave.sullivan@gmail.com">Nick Sullivan</maintainer>
  <author     email="nick.dave.sullivan@gmail.com">Nick Sullivan</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/multi_jackal_tutorials</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>multi_jackal_base</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>multi_jackal_base</run_depend>
  <run_depend>rviz</run_depend>
</package>
